ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: internal-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx-internal"
spec:
  rules:
    - host: internal.example.com
      http:
        paths:
          - path: /
            backend:
              serviceName: my-service
              servicePort: 80
